@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.77 2005/03/01 18:05:49 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.78 2005/03/07 08:52:10 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  7 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Switched spawn() over to commands.getstatusoutput() instead of fork/waitpid
 
   1 Mar 2005; Preston Cody <codeman@gentoo.org>
   Fixed a bunch of true -> True typos. lots of em
